# TwolPli

data/: menu.xml  setup.xml
data/rc_models/: rc_models.cfg
data/skin_default/icons/: Makefile.am
lib/gui/: elistboxcontent.cpp
lib/python/Components/: Harddisk.py  SystemInfo.py  UsageConfig.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: Flash_online.py  H9SDmanager.py  IPTVcreate.py  ImageBackup.py  Makefile.am  plugin.py
lib/python/Screens/: About.py  FlashImage.py  H9SDswap.py  Makefile.am  Multiboot.py  MultibootGB.py  Standby.py
lib/python/Tools/: Multiboot.py
lib/service/: servicedvb.h
m4/: depout.m4
main/: enigma.cpp
po/: nl.po
tools/: enigma2.sh.in
