installdir = $(pkglibdir)/python/Plugins/SystemPlugins/SoftwareManager

SUBDIRS = meta

install_PYTHON =	\
	__init__.py \
	plugin.py \
	BackupRestore.py \
	ImageBackup.py \
	IPTVcreate.py \
	Flash_online.py \
	e2m3u2bouquet.py \
 	ImageWizard.py \
	SoftwareTools.py

dist_install_DATA = \
	imagewizard.xml \
	installable.png \
	installed.png \
	install.png \
	noprev.png \
	remove.png \
	update.png \
	upgradeable.png \
	upgrade.png
